--- a/src/components/DesignBanner/design-banner.css
+++ b/src/components/DesignBanner/design-banner.css
@@ -1,5 +1,6 @@
 :root {
   --fontHeight: 100;
+  --animation-play-state: running;
 }
 
 .design-banner-main {
@@ -353,56 +354,7 @@
   /* font-variation-settings: 790; */
 }
 
-/* .s-animate > span:nth-child(2) {
-  animation-delay: 0.2s;
-}
-.s-animate > span:nth-child(3) {
-  animation-delay: 0.4s;
-}
-.s-animate > span:nth-child(4) {
-  animation-delay: 0.6s;
-} */
-
-/* @keyframes dancing {
-  0% {
-    transform: scaleY(0.5);
-  }
-  50% {
-    transform: scaleY(0.3);
-  }
-
-  100% {
-    transform: scaleY(0.2);
-  }
-} */
-
-.first-element {
-  /* --fontHeight: 50; */
-  /* font-family: Tusker, sans-serif; */
-  /* font-size: 14.95rem; */
-  /* font-variation-settings: "wght" 850; */
-  /* font-weight: 100; */
-  line-height: 1;
-  color: aliceblue;
-  position: absolute;
-  display: inline-block;
-  /* translate: none; */
-  /* rotate: none; */
-  /* scale: none; */
-  /* opacity: 1; */
-  font-size: 290px;
-
-  bottom: 0;
-  left: 0;
-  /* transform: translate(0px, 0px); */
-  /* 
-  animation: dancing 1s linear infinite;
-  transform-origin: bottom; */
-
-  animation: dancing 4s ease 3s infinite;
-  transform-origin: bottom;
-  animation-duration: 5s;
-}
+/*  */
 
 .updown:hover {
   transform: scaleY(1.75);
@@ -414,13 +366,16 @@
   0% {
     transform: scaleY(1);
   }
+
   10% {
-    transform: scaleY(0.5);
-  }
-  20% {
-    transform: scaleY(0.4);
+    transform: scaleY(0.8);
   }
 
+  20% {
+    transform: scaleY(0.6);
+  }
+
+  /* Pause animation for 3 seconds at 30% */
   30% {
     transform: scaleY(0.6);
   }
@@ -429,24 +384,29 @@
     transform: scaleY(0.8);
   }
 
-  50% {
-    transform: scaleY(1.2);
-  }
+  /* Pause animation for 3 seconds at 50% */
+  /* 50% {
+    transform: scaleY(0.7);
+  } */
 
+  /* Pause animation for 3 seconds at 60% */
   60% {
-    transform: scaleY(1.4);
+    transform: scaleY(0.8);
   }
 
   70% {
-    transform: scaleY(1.2);
+    transform: scaleY(0.9);
   }
 
   80% {
     transform: scaleY(1);
   }
-  90% {
+
+  /* Pause animation for 3 seconds at 90% */
+  /* 90% {
     transform: scaleY(1.2);
-  }
+  } */
+
   100% {
     transform: scaleY(1);
   }
@@ -457,37 +417,38 @@
     transform: scaleY(1);
   }
   10% {
-    transform: scaleY(0.8);
+    transform: scaleY(0.7);
   }
   20% {
-    transform: scaleY(1);
+    transform: scaleY(0.6);
+    animation-play-state: paused;
   }
 
   30% {
-    transform: scaleY(1.2);
-  }
-
-  40% {
-    transform: scaleY(1.3);
-  }
-
-  50% {
-    transform: scaleY(1);
-  }
-
-  60% {
     transform: scaleY(0.8);
   }
 
-  70% {
-    transform: scaleY(1);
+  40% {
+    transform: scaleY(0.5);
+  }
+  /* 
+  50% {
+    transform: scaleY(0.5);
+  } */
+
+  60% {
+    transform: scaleY(0.5);
   }
 
-  80% {
-    transform: scaleY(1.3);
+  70% {
+    transform: scaleY(0.7);
   }
+
+  /* 80% {
+    transform: scaleY(0.8);
+  } */
   90% {
-    transform: scaleY(1.5);
+    transform: scaleY(0.7);
   }
   100% {
     transform: scaleY(1);
@@ -499,38 +460,42 @@
     transform: scaleY(1);
   }
   10% {
-    transform: scaleY(1.3);
+    transform: scaleY(0.6);
   }
+
   20% {
-    transform: scaleY(1.4);
+    transform: scaleY(0.7);
   }
 
   30% {
-    transform: scaleY(1.2);
+    transform: scaleY(0.8);
   }
-
+  /* 
   40% {
-    transform: scaleY(1);
-  }
+    transform: scaleY(0.9);
+    animation-play-state: paused;
+  } */
 
   50% {
     transform: scaleY(0.8);
   }
 
   60% {
-    transform: scaleY(0.6);
-  }
-
-  70% {
     transform: scaleY(0.8);
   }
 
-  80% {
-    transform: scaleY(1);
+  70% {
+    transform: scaleY(0.5);
   }
+
+  /* 80% {
+    transform: scaleY(0.6);
+  } */
   90% {
-    transform: scaleY(1.4);
+    transform: scaleY(0.5);
+    animation-play-state: paused;
   }
+
   100% {
     transform: scaleY(1);
   }
@@ -538,21 +503,46 @@
 
 @keyframes fourth {
   0% {
-    transform: scaleY(0.9);
+    transform: scaleY(1);
   }
-  20% {
-    transform: scaleY(1.3);
-  }
-  40% {
-    transform: scaleY(1.6);
+  10% {
+    transform: scaleY(0.5);
   }
 
-  75% {
+  20% {
+    transform: scaleY(0.8);
+  }
+
+  30% {
     transform: scaleY(1);
   }
 
+  /* 40% {
+    transform: scaleY(0);
+  } */
+
+  50% {
+    transform: scaleY(1);
+  }
+
+  60% {
+    transform: scaleY(0.7);
+  }
+
+  70% {
+    transform: scaleY(0.8);
+  }
+
+  80% {
+    transform: scaleY(0.6);
+  }
+  90% {
+    transform: scaleY(0.6);
+    animation-play-state: paused;
+  }
+
   100% {
-    transform: scaleY(0.9);
+    transform: scaleY(1);
   }
 }
 
@@ -576,17 +566,31 @@
   }
 }
 
+@keyframes pause-10 {
+  0% {
+    animation-play-state: paused;
+  }
+  20.1% {
+    animation-play-state: paused;
+  }
+  100% {
+    animation-play-state: paused;
+  }
+}
+
 .hover-effect-sound {
   transform-origin: bottom;
 }
 
 .work-section {
-  font-size: 15rem;
+  font-size: 20rem;
   font-weight: 500;
   letter-spacing: 15px;
   height: 300px;
+  width: auto;
 
   position: relative;
+  animation-play-state: running;
 }
 
 .one {
@@ -649,22 +653,35 @@
 }
 
 .first-text-anim {
-  animation: dancing 3s linear infinite;
+  animation: dancing 4s linear infinite;
+
   transform-origin: bottom;
-  animation-duration: 7s;
+  animation-fill-mode: both;
+  animation-duration: 4s;
   line-height: 1;
 }
 
 .second-text-anim {
-  animation: second 2s linear infinite;
-  animation-duration: 7s;
+  animation: second 4s linear infinite;
+  animation-duration: 4s;
   transform-origin: bottom;
   line-height: 1;
 }
 
 .third-text-anim {
-  animation: third 2s linear infinite;
-  animation-duration: 7s;
+  animation: third 4s linear infinite;
+  animation-duration: 4s;
   transform-origin: bottom;
   line-height: 1;
+}
+
+.fourth-text-anim {
+  animation: fourth 4s linear infinite;
+  animation-duration: 6s;
+  transform-origin: bottom;
+  line-height: 1;
+}
+
+.paused {
+  animation-play-state: paused;
 }
