--- a/src/components/DesignBanner/design-banner.css
+++ b/src/components/DesignBanner/design-banner.css
@@ -274,7 +274,6 @@
   }
 
   to {
-    /* transform: translateX(0%); */
     opacity: 1;
   }
 }
@@ -350,11 +349,7 @@
 
 .s-animate:hover {
   animation: dancing 10s linear;
-
-  /* font-variation-settings: 790; */
 }
-
-/*  */
 
 .updown:hover {
   transform: scaleY(1.75);
@@ -375,7 +370,6 @@
     transform: scaleY(0.6);
   }
 
-  /* Pause animation for 3 seconds at 30% */
   30% {
     transform: scaleY(0.6);
   }
@@ -384,12 +378,6 @@
     transform: scaleY(0.8);
   }
 
-  /* Pause animation for 3 seconds at 50% */
-  /* 50% {
-    transform: scaleY(0.7);
-  } */
-
-  /* Pause animation for 3 seconds at 60% */
   60% {
     transform: scaleY(0.8);
   }
@@ -401,11 +389,6 @@
   80% {
     transform: scaleY(1);
   }
-
-  /* Pause animation for 3 seconds at 90% */
-  /* 90% {
-    transform: scaleY(1.2);
-  } */
 
   100% {
     transform: scaleY(1);
@@ -415,134 +398,93 @@
 @keyframes second {
   0% {
     transform: scaleY(1);
-  }
-  10% {
-    transform: scaleY(0.7);
+    transition: transform 320ms ease-in-out;
   }
   20% {
-    transform: scaleY(0.6);
-    animation-play-state: paused;
-  }
-
-  30% {
     transform: scaleY(0.8);
+    transition: transform 320ms ease-in-out;
   }
-
   40% {
-    transform: scaleY(0.5);
+    transform: scaleY(0.6);
+    transition: transform 320ms ease-in-out;
   }
-  /* 
-  50% {
-    transform: scaleY(0.5);
-  } */
 
   60% {
-    transform: scaleY(0.5);
-  }
-
-  70% {
     transform: scaleY(0.7);
+    transition: transform 320ms ease-in-out;
   }
 
-  /* 80% {
+  80% {
     transform: scaleY(0.8);
-  } */
-  90% {
-    transform: scaleY(0.7);
+    transition: transform 320ms ease-in-out;
   }
+
   100% {
     transform: scaleY(1);
+    transition: transform 320ms ease-in-out;
   }
 }
 
 @keyframes third {
   0% {
     transform: scaleY(1);
-  }
-  10% {
-    transform: scaleY(0.6);
+    transition: transform 400ms ease-in-out;
   }
 
   20% {
-    transform: scaleY(0.7);
-  }
-
-  30% {
-    transform: scaleY(0.8);
-  }
-  /* 
-  40% {
     transform: scaleY(0.9);
-    animation-play-state: paused;
-  } */
+    transition: transform 400ms ease-in-out;
+  }
 
-  50% {
-    transform: scaleY(0.8);
+  40% {
+    transform: scaleY(0.5);
+    transition: transform 400ms ease-in-out;
   }
 
   60% {
-    transform: scaleY(0.8);
+    transform: scaleY(0.5);
+    transition: transform 400ms ease-in-out;
   }
 
-  70% {
-    transform: scaleY(0.5);
-  }
-
-  /* 80% {
-    transform: scaleY(0.6);
-  } */
-  90% {
-    transform: scaleY(0.5);
-    animation-play-state: paused;
+  80% {
+    transform: scaleY(0.9);
+    transition: transform 400ms ease-in-out;
   }
 
   100% {
     transform: scaleY(1);
+    transition: transform 400ms ease-in-out;
   }
 }
 
 @keyframes fourth {
   0% {
     transform: scaleY(1);
+    transition: transform 400ms ease-in-out;
   }
-  10% {
-    transform: scaleY(0.5);
-  }
-
   20% {
-    transform: scaleY(0.8);
+    transform: scaleY(0.9);
+    transition: transform 400ms ease-in-out;
   }
 
-  30% {
-    transform: scaleY(1);
-  }
-
-  /* 40% {
-    transform: scaleY(0);
-  } */
-
-  50% {
-    transform: scaleY(1);
+  40% {
+    transform: scaleY(0.7);
+    transition: transform 400ms ease-in-out;
   }
 
   60% {
     transform: scaleY(0.7);
-  }
-
-  70% {
-    transform: scaleY(0.8);
+    transition: transform 400ms ease-in-out;
   }
 
   80% {
-    transform: scaleY(0.6);
-  }
-  90% {
-    transform: scaleY(0.6);
-    animation-play-state: paused;
+    transform: scaleY(0.7);
+    transition: transform 400ms ease-in-out;
   }
 
   100% {
     transform: scaleY(1);
+    transition: transform 400ms ease-in-out;
   }
 }
 
@@ -583,7 +525,7 @@
 }
 
 .work-section {
-  font-size: 20rem;
+  font-size: 24rem;
   font-weight: 500;
   letter-spacing: 15px;
   height: 300px;
@@ -653,35 +595,70 @@
 }
 
 .first-text-anim {
-  animation: dancing 4s linear infinite;
+  animation: dancing-fast 3s ease-in-out infinite;
 
   transform-origin: bottom;
   animation-fill-mode: both;
-  animation-duration: 4s;
+  animation-duration: 2.5s;
   line-height: 1;
 }
 
 .second-text-anim {
-  animation: second 4s linear infinite;
-  animation-duration: 4s;
+  animation: second 3s ease-in-out infinite;
+  animation-duration: 2.5s;
   transform-origin: bottom;
   line-height: 1;
 }
 
 .third-text-anim {
-  animation: third 4s linear infinite;
-  animation-duration: 4s;
+  animation: third 3s ease-in-out infinite;
+  animation-duration: 2.5s;
   transform-origin: bottom;
   line-height: 1;
 }
 
 .fourth-text-anim {
-  animation: fourth 4s linear infinite;
-  animation-duration: 6s;
+  animation: fourth 3s ease-in-out infinite;
+  animation-duration: 2.5s;
   transform-origin: bottom;
   line-height: 1;
 }
 
 .paused {
   animation-play-state: paused;
+}
+
+.vari {
+  font-size: 14rem;
+  font-weight: 500;
+  font-variation-settings: "hght" var(--fontHeight), "wdth" 1.5;
+}
+
+@keyframes dancing-fast {
+  0% {
+    transform: scaleY(1);
+    transition: transform 400ms ease-in-out;
+  }
+  20% {
+    transform: scaleY(0.6);
+    transition: transform 400ms ease-in-out;
+  }
+  40% {
+    transform: scaleY(0.7);
+    transition: transform 400ms ease-in-out;
+  }
+
+  60% {
+    transform: scaleY(0.7);
+    transition: transform 400ms ease-in-out;
+  }
+  80% {
+    transform: scaleY(0.9);
+    transition: transform 4000ms ease-in-out;
+  }
+
+  100% {
+    transform: scaleY(1);
+    transition: transform 400ms ease-in-out;
+  }
 }
