Marquee New Animation

--- a/src/components/DesignBanner/design-banner.css
+++ b/src/components/DesignBanner/design-banner.css
@@ -676,3 +676,9 @@
 .animate-span {
   transition: 0.3s all;
 }
+
+.portfolio-main {
+  background-image: url(../../../public/images/view2.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
