--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -22,7 +22,9 @@
 .mylinks {
   text-transform: uppercase;
   font-variation-settings: "hght" 1, "wdth" 1;
-  font-size: 160px !important;
+  font-size: 220px !important;
+  font-weight: 900;
+  letter-spacing: 3px;
 }
 
 .mylinks:hover {
@@ -31,4 +33,6 @@
 
 .childletter {
   line-height: 1;
+  transition: all 0.6s;
+  font-size: 180px !important;
 }
